# AIM-Server

./: .env.example  .gitignore  INTERVIEW_QA.md  README.md  docker-compose.yml
GoChatPersister/: .gitignore  Dockerfile  go.mod
GoChatPersister/cmd/persister/: main.go
GoChatPersister/internal/config/: config.go
GoChatPersister/internal/consumer/: consumer.go
GoImageServer/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  go.mod  go.sum
GoImageServer/cmd/avatarserver/: main.go
GoImageServer/internal/config/: config.go
GoImageServer/internal/server/: grpc.go  http.go
GoImageServer/internal/service/: avatar.go
GoImageServer/internal/storage/: filestore.go  objectstore.go  objectstore_stub.go  storage.go
GoImageServer/pkg/pb/: avatar.pb.go  avatar_grpc.pb.go
GoImageServer/proto/: avatar.proto
GoMailServer/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  go.mod  go.sum
GoMailServer/cmd/mailserver/: main.go
GoMailServer/internal/config/: config.go
GoMailServer/internal/mailer/: smtp.go
GoMailServer/internal/server/: grpc.go
GoMailServer/internal/service/: mail.go
GoMailServer/internal/store/: codestore.go  codestore_test.go
GoMailServer/pkg/pb/: mail.pb.go  mail_grpc.pb.go
GoMailServer/proto/: mail.proto
GoMediaServer/: .dockerignore  .env.example  Dockerfile  go.mod
GoMediaServer/cmd/mediaserver/: main.go
GoMediaServer/internal/config/: config.go
GoMediaServer/internal/server/: http.go
GoMediaServer/internal/storage/: filestore.go  objectstore.go  objectstore_stub.go  storage.go
IMServer/: CMakeLists.txt  README.md
IMServer/IMServer/: .dockerignore  AgentGrpcClient.cpp  AgentGrpcClient.h  AvatarGrpcClient.cpp  AvatarGrpcClient.h  CMakeLists.txt  ClientSession.cpp  ClientSession.h  Dockerfile  Field.cpp  Field.h  IMCodec.cpp  IMCodec.h  IMSer.cpp  IMSer.h  IMServer.cpp  IMServer.h  IMTestClient.cpp  MailGrpcClient.cpp  MailGrpcClient.h  MsgCacheManager.cpp  MsgCacheManager.h  MySqlManager.cpp  MySqlManager.h  PasswordUtil.h  QueryResult.cpp  QueryResult.h  RabbitMqPublisher.cpp  RabbitMqPublisher.h  UserManager.cpp  UserManager.h  agent.proto  im.proto  mysqltool.cpp  mysqltool.h
IMServer/IMServer/base/: AsyncLogging.cc  AsyncLogging.h  Atomic.h  BlockingQueue.h  BoundedBlockingQueue.h  Condition.cc  Condition.h  CountDownLatch.cc  CountDownLatch.h  CurrentThread.cc  CurrentThread.h  Date.cc  Date.h  Exception.cc  Exception.h  FileUtil.cc  FileUtil.h  GzipFile.h  LogFile.cc  LogFile.h  LogStream.cc  LogStream.h  Logging.cc  Logging.h  Mutex.h  ProcessInfo.cc  ProcessInfo.h  Singleton.h  StringPiece.h  Thread.cc  Thread.h  ThreadLocal.h  ThreadLocalSingleton.h  ThreadPool.cc  ThreadPool.h  TimeZone.cc  TimeZone.h  Timestamp.cc  Timestamp.h
IMServer/IMServer/base/tests/: AsyncLogging_test.cc  Atomic_unittest.cc  BlockingQueue_bench.cc  BlockingQueue_bench2.cc  BlockingQueue_test.cc  BoundedBlockingQueue_test.cc  Date_unittest.cc  FileUtil_test.cc  Fork_test.cc  GzipFile_test.cc  LogFile_test.cc  LogStream_bench.cc  LogStream_test.cc  Logging_test.cc  Mutex_test.cc  ProcessInfo_test.cc  SingletonThreadLocal_test.cc  Singleton_test.cc  ThreadLocalSingleton_test.cc  ThreadLocal_test.cc  ThreadPool_test.cc  Thread_bench.cc  Thread_test.cc  TimeZone_unittest.cc  TimeZone_util.cc  Timestamp_unittest.cc
IMServer/IMServer/net/: Acceptor.cc  Acceptor.h  Buffer.cc  Buffer.h  Callbacks.h  Channel.cc  Channel.h  Connector.cc  Connector.h  EventLoop.cc  EventLoop.h  EventLoopThread.cc  EventLoopThread.h  EventLoopThreadPool.cc  EventLoopThreadPool.h  InetAddress.cc  InetAddress.h  Poller.cc  Poller.h  Socket.cc  Socket.h  SocketsOps.cc  TcpClient.cc  TcpClient.h  TcpConnection.cc  TcpConnection.h  TcpServer.cc  TcpServer.h  Timer.cc  Timer.h  TimerId.h  TimerQueue.cc  TimerQueue.h  ZlibStream.h  boilerplate.cc  boilerplate.h
IMServer/IMServer/net/http/: HttpContext.cc  HttpContext.h  HttpRequest.h  HttpResponse.cc  HttpResponse.h  HttpServer.cc  HttpServer.h
IMServer/IMServer/net/http/tests/: HttpRequest_unittest.cc  HttpServer_test.cc
IMServer/IMServer/net/inspect/: Inspector.cc  Inspector.h  PerformanceInspector.cc  PerformanceInspector.h  ProcessInspector.cc  ProcessInspector.h  SystemInspector.cc  SystemInspector.h
IMServer/IMServer/net/inspect/tests/: Inspector_test.cc
IMServer/IMServer/net/poller/: DefaultPoller.cc  EPollPoller.cc  EPollPoller.h  PollPoller.cc  PollPoller.h
IMServer/IMServer/net/protobuf/: BufferStream.h  ProtobufCodecLite.cc  ProtobufCodecLite.h
IMServer/IMServer/net/protorpc/: RpcChannel.cc  RpcChannel.h  RpcCodec.cc  RpcCodec.h  RpcCodec_test.cc  RpcServer.cc  RpcServer.h
IMServer/IMServer/net/tests/: Buffer_unittest.cc  Channel_test.cc  EchoClient_unittest.cc  EchoServer_unittest.cc  EventLoopThreadPool_unittest.cc  EventLoopThread_unittest.cc  EventLoop_unittest.cc  InetAddress_unittest.cc  TcpClient_reg1.cc  TcpClient_reg2.cc  TcpClient_reg3.cc  TimerQueue_unittest.cc  ZlibStream_unittest.cc
IMStressTest/: client.go  go.mod  main.go  metrics.go  protocol.go  protocol_test.go  scenarios.go
goagent/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum
goagent/cmd/agent/: main.go
goagent/internal/cache/: cache.go  memory.go  redis.go
goagent/internal/config/: config.go
goagent/internal/llm/: empty_provider.go  openai_provider.go  provider.go  skill.go
goagent/internal/middleware/: logging.go
goagent/internal/rag/: db.go  embedder.go  qdrant_store.go  qdrant_store_test.go  retriever.go  store.go
goagent/internal/ratelimit/: limiter.go  limiter_test.go
goagent/internal/server/: grpc.go  http.go
goagent/internal/service/: agent_service.go
goagent/pkg/pb/: agent.pb.go  agent_grpc.pb.go
goagent/proto/: agent.proto
